# SEISMIC_MM

./: .dockerignore  .env  .env.example  .gitignore  CHANGES.md  CITATION.cff  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SATELLITE_MAP_IMPLEMENTATION.md  SETUP.md  _download_gfm.py  dev-all.js  findings.md  gfm_server.py  index.html  package-lock.json  package.json  progress.md  research_2002.md  server.py  task_plan.md  test.py  train_model.js  vite.config.js
.agent/: autonomy.json  hooks.json
.agent/runs/: cascade-1781523525840.json  cascade-1781555610322.json  cascade-1781557371391.json  cascade-1781569226018.json  cascade-1781573198950.json  cascade-1781575170526.json  cascade-1781577244389.json  cascade-1781579287393.json  cascade-1781581378598.json
.agent/tmp/: curl-grep-2a67f072b8af428789c31ce10674b590.txt
.aim/: memory.aim
.hades/ml/: README.md  config.json
.kortex/: vector_index.db-journal
gfm-weights/: .no-weights  README.md
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
public/: manifest.json
reports/: security-audit-1781589245.md
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/controllers/: RaycasterController.js  UIController.js
src/data/: CatalogDataService.js  (+8 more)
tools/: extract_urls.js  extract_urls.ps1  gfm_offline_server.py  test_fetch.py  triage_agent.py
(+55 files in other folders)
