[package]
name = "cisv"
version = "1.0.0"
description = "CISV — SEISMIC Movement Monitoring — Native Telemetry & Audio Core"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [] }
rodio = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[features]
# Required by tauri-build for production bundles
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Microscopic installer target: strip + LTO + size-optimized codegen
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
